[metadata]
name=plottools
version=1.0.0
author=Valerio Spinogatti
description=A set of command line scripts for plotting data with python
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/Sp-ino/plottools
license=GNU

[options.entry_points]
console_scripts = 
    basic_plot = plottools.basic_plot:main
    compute_fom_adc = plottools.compute_fom_adc:main
    fourier = plottools.fourier:main
    histogr = plottools.histogr:main
    rms_discr = plottools.rms_discr:main

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib
    numpy
    scipy